--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "sequelize": "^6.37.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "vite-express": "^0.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
