--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.2",
