--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/styles": "^5.15.10",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
@@ -29,6 +30,7 @@
     "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^2.3.11",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "sequelize": "^6.37.0",
