--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^2.3.11",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "sequelize": "^6.37.0",
